<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Toolbar -->
    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="@android:dimen/app_icon_size"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="#AD2312"
            android:contentDescription="@string/maplestory"
            android:src="@drawable/maplestory" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="#AD2312"
            android:elevation="4dp"
            app:title="  메이플스토리 주간 보스 체커"
            app:titleTextColor="@android:color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_weight="?android:attr/actionBarSize" />

    <ScrollView
        android:id="@+id/MainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/MainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/SubLayout1"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_weight="@android:dimen/thumbnail_height"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/hilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/hilla"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hilla" />

                <ImageButton
                    android:id="@+id/pinkbean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/pinkbean"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pinkbean" />

                <ImageButton
                    android:id="@+id/cygnus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/cygnus"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cygnus" />

                <ImageButton
                    android:id="@+id/zakum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/zakum"
                    android:scaleType="centerCrop"
                    android:src="@drawable/zakum" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/SubLayout2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_weight="@android:dimen/thumbnail_height"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/pierre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/pierre"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pierre" />

                <ImageButton
                    android:id="@+id/banban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/banban"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banban" />

                <ImageButton
                    android:id="@+id/bloodyqueen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/bloodyqueen"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bloodyqueen" />

                <ImageButton
                    android:id="@+id/bellum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/bellum"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bellum" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/SubLayout3"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_weight="@android:dimen/thumbnail_height"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/magnus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/magnus"
                    android:scaleType="centerCrop"
                    android:src="@drawable/magnus" />

                <ImageButton
                    android:id="@+id/papulatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/papulatus"
                    android:scaleType="centerCrop"
                    android:src="@drawable/papulatus" />

                <ImageButton
                    android:id="@+id/su"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/su"
                    android:scaleType="centerCrop"
                    android:src="@drawable/su" />

                <ImageButton
                    android:id="@+id/damian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/damian"
                    android:scaleType="centerCrop"
                    android:src="@drawable/damian" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/SubLayout4"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_weight="@android:dimen/thumbnail_height"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/lucid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/lucid"
                    android:scaleType="centerCrop"
                    android:src="@drawable/lucid" />

                <ImageButton
                    android:id="@+id/will"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/will"
                    android:scaleType="centerCrop"
                    android:src="@drawable/will" />

                <ImageButton
                    android:id="@+id/guadianangelslime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/guardianangelslime"
                    android:scaleType="centerCrop"
                    android:src="@drawable/guardianangelslime" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>